--- a/docs/css/theme-navy.css
+++ b/docs/css/theme-navy.css
@@ -41,20 +41,20 @@
 
 /*!---------- 1. GLOBAL STYLES ----------*/
 body{
-    -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale;
-    font-size:13px;
-    line-height:24px;
-    font-family:open sans,helvetica neue,Helvetica,Arial,sans-serif;
-    color:#666;
-    overflow-x:hidden;
-    top:0;
-    left:0;
-    z-index:1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-size: 13px;
+    line-height: 24px;
+    font-family: open sans, helvetica neue, Helvetica, Arial, sans-serif;
+    color: #666;
+    overflow-x: hidden;
+    top: 0;
+    left: 0;
+    z-index: 1;
     background-color: #000000;
-    background-image: url('../img/home.webp');
-    background-size:cover!important;
-    background-position:50% 50%!important;
+    background-image: none;
+    background-size: cover!important;
+    background-position: 50% 50%!important;
     transition: background 1.5s linear;
     -webkit-transition: background 1.5s linear;
     -moz-transition: background 1.5s linear;
