--- a/docs/css/yellow.css
+++ b/docs/css/yellow.css
@@ -6127,7 +6127,21 @@
   .bg-dark {
 	background-color: #11171a !important;
   }
-  
+
+  .video-container{
+	width: 100vw;
+	height: 100vh;
+  }
+	  
+  iframe {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 100vw;
+	height: 100vh;
+	transform: translate(-50%, -50%);
+  }
+
   .bg-umineko {
 	background-color: #000000;
 	background-image: url("../img/umineko.webp") !important;
@@ -6153,13 +6167,34 @@
 	position: relative;
   }
   
+  .bg-header {
+	position: absolute;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+    z-index: -100;
+    background-size: auto 100%;
+    overflow: hidden;
+	box-shadow: 0 0 70px 30px black inset;
+  }
+  .bg-header:before {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	content: "";
+	background-color: rgba(0, 0, 0, 0.65);
+  }
+
   .bg-silksong {
 	background-color: #000000;
 	background-image: url("../img/silksong.webp") !important;
 	background-repeat: no-repeat !important;
 	background-attachment: unset;
-	background-size: 100%;
-	background-position: right;
+	background-size: auto 100%;
+	background-position: left;
 	position: relative;
 	box-shadow: 0 0 50px 50px black inset;
   }
@@ -6169,9 +6204,8 @@
 	background-image: url("../img/blasphemous2.webp") !important;
 	background-repeat: no-repeat !important;
 	background-attachment: unset;
-	background-size: 100%;
-	background-position: left;
-	background-position-x: -700px;
+	background-size: auto 100%;
+	background-position: right;
 	position: relative;
 	box-shadow: 0 0 70px 70px black inset;
   }
