--- a/docs/css/yellow.css
+++ b/docs/css/yellow.css
@@ -6147,9 +6147,10 @@
 	background-image: url("../img/umineko.webp") !important;
 	background-repeat: no-repeat !important;
 	background-attachment: unset;
-	background-size: cover;
+	background-size: auto 100%;
+	background-position: center;
 	position: relative;
-	box-shadow: 0 0 70px 30px black inset;
+	box-shadow: 0 0 70px 20px black inset;
   }
   .bg-umineko:before {
 	position: absolute;
@@ -6160,7 +6161,7 @@
 	left: 0;
 	top: 0;
 	content: "";
-	background-color: rgba(0, 0, 0, 0.65);
+	background-color: rgba(0, 0, 0, 0.7);
   }
   .bg-umineko .container {
 	z-index: 2;
@@ -6218,6 +6219,31 @@
 	background-position: right;
 	position: relative;
 	box-shadow: 0 0 70px 70px black inset;
+  }
+
+  .bg-crowsworn {
+	background-color: #000000;
+	background-image: url("../img/crowsworn.webp") !important;
+	background-repeat: no-repeat !important;
+	background-attachment: unset;
+	background-size: cover;
+	position: relative;
+	box-shadow: 0 0 70px 30px black inset;
+  }
+  .bg-crowsworn:before {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	display: block;
+	left: 0;
+	top: 0;
+	content: "";
+	background-color: rgba(0, 0, 0, 0.65);
+  }
+  .bg-crowsworn .container {
+	z-index: 2;
+	position: relative;
   }
   
   a.bg-dark:hover,
