--- a/docs/css/yellow.css
+++ b/docs/css/yellow.css
@@ -6168,6 +6168,32 @@
 	position: relative;
   }
 
+  .bg-higurashi {
+	background-color: #000000;
+	background-image: url("../img/higurashi.webp") !important;
+	background-repeat: no-repeat !important;
+	background-attachment: unset;
+	background-size: cover;
+	background-position: top;
+	position: relative;
+	box-shadow: 0 0 70px 55px black inset;
+  }
+  .bg-higurashi:before {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	display: block;
+	left: 0;
+	top: 0;
+	content: "";
+	background-color: rgba(0, 0, 0, 0.7);
+  }
+  .bg-higurashi .container {
+	z-index: 2;
+	position: relative;
+  }
+
   .bg-headerimage {
 	background-color: #000000;
 	background-image: url("../img/header.webp") !important;
@@ -6208,6 +6234,33 @@
 	background-position: left;
 	position: relative;
 	box-shadow: 0 0 50px 50px black inset;
+  }
+
+  .bg-palecourt {
+	background-color: #000000;
+	background-image: url("../img/palecourt.webp") !important;
+	background-repeat: no-repeat !important;
+	background-attachment: unset;
+	background-size: cover;
+	background-position: center;
+	position: relative;
+	box-shadow: 0 0 70px 30px black inset;
+  }
+
+  .bg-palecourt:before {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	display: block;
+	left: 0;
+	top: 0;
+	content: "";
+	background-color: rgba(0, 0, 0, 0.7);
+  }
+  .bg-palecourt .container {
+	z-index: 2;
+	position: relative;
   }
   
   .bg-blasphemous2 {
