--- a/site/css/yellow.css
+++ b/site/css/yellow.css
@@ -6230,10 +6230,25 @@
 	background-image: url("../img/silksong.webp") !important;
 	background-repeat: no-repeat !important;
 	background-attachment: unset;
-	background-size: auto 100%;
-	background-position: left;
+	background-size: cover;
+	background-position: top;
 	position: relative;
-	box-shadow: 0 0 50px 50px black inset;
+	box-shadow: 0 0 70px 45px black inset;
+  }
+  .bg-silksong:before {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	display: block;
+	left: 0;
+	top: 0;
+	content: "";
+	background-color: rgba(0, 0, 0, 0.7);
+  }
+  .bg-silksong .container {
+	z-index: 2;
+	position: relative;
   }
 
   .bg-palecourt {
