--- a/mkdocs/docs/css/custom.css
+++ b/mkdocs/docs/css/custom.css
@@ -13,3 +13,17 @@ table {
 .md-typeset {
     --md-typeset-table-color: var(--md-primary-fg-color);
 }
+
+@keyframes heart {
+    0%, 40%, 80%, 100% {
+      transform: scale(1);
+    }
+    20%, 60% {
+      transform: scale(1.15);
+    }
+}
+
+.heart {
+    color: #e92063;
+    animation: heart 1000ms infinite;
+}
