--- a/mkdocs/docs/css/custom.css
+++ b/mkdocs/docs/css/custom.css
@@ -1,9 +1,9 @@
 [data-md-color-scheme="slate"] {
-    --md-code-fg-color: #d4c166
+    --md-code-fg-color: #d4c166;
 }
 
 [data-md-color-scheme="default"] {
-    --md-code-fg-color: #000000
+    --md-code-fg-color: #ef1b85;
 }
 
 .md-typeset table:not([class]) {
@@ -42,4 +42,16 @@ table {
 .heart {
     color: #e92063;
     animation: heart 1000ms infinite;
+}
+
+.md-nav__title, .md-nav__container .md-nav__link {
+    font-size: 0.75rem;
+}
+
+.md-nav {
+    padding-left: 0.6rem;
+}
+
+.md-typeset h1 {
+    color: var(--md-default-fg-color);
 }
