--- a/mkdocs/docs/css/custom.css
+++ b/mkdocs/docs/css/custom.css
@@ -1,9 +1,11 @@
 [data-md-color-scheme="slate"] {
     --md-code-fg-color: #d4c166;
+    --md-typeset-mark-color: #f155a3;
 }
 
 [data-md-color-scheme="default"] {
-    --md-code-fg-color: #ef1b85;
+    --md-code-fg-color: #d31775;
+    --md-typeset-mark-color: #145fe1;
 }
 
 .md-typeset table:not([class]) {
@@ -52,6 +54,15 @@ table {
     padding-left: 0.6rem;
 }
 
-.md-typeset h1 {
-    color: var(--md-default-fg-color);
+.md-typeset mark {
+    background-color: var(--md-code-bg-color);
+    border-radius: .1rem;
+    font-size: .85em;
+    padding: 0 .2941176471em;
+    color: var(--md-typeset-mark-color)
+}
+
+mark {
+    font-feature-settings: "kern";
+    font-family: var(--md-code-font-family);
 }
