--- a/site/css/yellow.css
+++ b/site/css/yellow.css
@@ -6206,11 +6206,10 @@
 
   .bg-header {
 	position: absolute;
-    bottom: 0;
-    min-width: 100%; 
-    min-height: 100%;
+    width: 100%;
+	height: 100%;
+	object-fit: cover;
     z-index: -50;
-    background-size: auto 100%;
     overflow: hidden;
 	box-shadow: 0 0 70px 30px black inset;
   }
