--- a/site/css/yellow.css
+++ b/site/css/yellow.css
@@ -6142,6 +6142,19 @@
 	transform: translate(-50%, -50%);
   }
 
+@media (prefers-reduced-motion: no-preference) {
+	section:not(#nav, #home) {
+		margin-left: 5%;
+		opacity: 0;
+		animation: fade-in linear forwards;
+		animation-timeline: view(100% 40%);
+	}
+	
+	@keyframes fade-in {
+		to {margin-left: 0%; opacity: 1;}
+	}
+}
+
   .bg-umineko {
 	background-color: #000000;
 	background-image: url("../img/umineko.webp") !important;
@@ -10115,7 +10128,6 @@
 	font-size: 1.5rem;
 	font-weight: 900;
 	color: #ffea00;
-	text-transform: uppercase;
   }
   
   .navbar .navbar-nav .nav-item {
@@ -10196,7 +10208,7 @@
 	transform: translateY(-100%);
   }
   .smart-scroll.scrolling.up {
-	background-color: rgba(0, 0, 0, 0.9);
+	background-color: rgba(0, 0, 0, 0.5);
 	-webkit-transform: translateY(0);
 	transform: translateY(0);
 	transition: all 0.3s ease-out;
