--- a/mkdocs/docs/css/admonitions.css
+++ b/mkdocs/docs/css/admonitions.css
@@ -4,20 +4,30 @@
 	--md-admonition-icon--code: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><!--! Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2024 Fonticons, Inc.--><path d="M392.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6m80.6 120.1c-12.5 12.5-12.5 32.8 0 45.3l89.3 89.4-89.4 89.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l112-112c12.5-12.5 12.5-32.8 0-45.3l-112-112c-12.5-12.5-32.8-12.5-45.3 0zm-306.7 0c-12.5-12.5-32.8-12.5-45.3 0l-112 112c-12.5 12.5-12.5 32.8 0 45.3l112 112c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256l89.4-89.4c12.5-12.5 12.5-32.8 0-45.3"/></svg>');
 }
 
+.md-typeset summary {
+	position: sticky;
+	top: 48px;
+	z-index: 1;
+	backdrop-filter: blur(10px);
+  }
+
 /* draft */
 .md-typeset .admonition.draft,
 .md-typeset details.draft {
-	border-color: rgb(43, 155, 70);
+	border-color: #9e9e9e;
+	border-width: 0px;
+	border-left-width: 4px;
+	box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.6);
 }
 
 .md-typeset .draft>.admonition-title,
 .md-typeset .draft>summary {
-	background-color: rgba(43, 155, 70, 0.1);
+	background-color: #9e9e9e1a;
 }
 
 .md-typeset .draft>.admonition-title::before,
 .md-typeset .draft>summary::before {
-	background-color: rgb(43, 155, 70);
+	background-color: #9e9e9e;
 	-webkit-mask-image: var(--md-admonition-icon--draft);
 	mask-image: var(--md-admonition-icon--draft);
 }
