--- a/mkdocs/docs/css/custom.css
+++ b/mkdocs/docs/css/custom.css
@@ -82,23 +82,25 @@ mark {
     font-family: var(--md-code-font-family);
 }
 
-body {
-    background-image: var(--background-image);
-    background-repeat: no-repeat;
-    background-position: bottom right;
-    background-attachment: fixed;
-    background-size: auto 70vh;
-}
-
-body::before {
-    position: fixed;
-    z-index: -100;
-    height: 100vh;
-    width: 100vw;
-    content: "";
-    background: var(--md-default-bg-color);
-    opacity: 0.5;
-
+@media only screen and (min-device-width: 1024px) {
+    body {
+        background-image: var(--background-image);
+        background-repeat: no-repeat;
+        background-position: bottom right;
+        background-attachment: fixed;
+        background-size: auto 70vh;
+    }
+    
+    body::before {
+        position: fixed;
+        z-index: -100;
+        height: 100vh;
+        width: 100vw;
+        content: "";
+        background: var(--md-default-bg-color);
+        opacity: 0.5;
+    
+    }
 }
 
 [dir=ltr] .md-header__title {
