--- a/mkdocs/docs/css/admonitions.css
+++ b/mkdocs/docs/css/admonitions.css
@@ -9,7 +9,17 @@
 	top: 48px;
 	z-index: 1;
 	backdrop-filter: blur(10px);
-  }
+}
+
+.md-typeset .admonition,
+.md-typeset details {
+	border-width: 0;
+	border-left-width: 4px;
+	box-shadow: var(--md-shadow-z2) !important;
+	transition: max-height 0.3s ease, opacity 0.3s ease;
+}
+
+
 
 /* draft */
 .md-typeset .admonition.draft,
@@ -17,7 +27,6 @@
 	border-color: #9e9e9e;
 	border-width: 0px;
 	border-left-width: 4px;
-	box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.6);
 }
 
 .md-typeset .draft>.admonition-title,
