--- a/mkdocs/docs/css/custom.css
+++ b/mkdocs/docs/css/custom.css
@@ -50,11 +50,11 @@ html {
 
 @keyframes beating {
     0%,to {
-        transform: scale(1) rotate(0deg)
+        transform: scale(1)
     }
 
     50% {
-        transform: scale(1.1) rotate(-5deg)
+        transform: scale(1.07)
     }
 }
 
